# optionstrategy

./: .gitignore  CORRECT_WAY_TO_GET_FYERS_TOKENS.md  DEPLOYMENT.md  GET_REFRESH_TOKEN_GUIDE.md  ONLINE_TOKEN_MANAGER_SETUP.md  PROJECT_STATUS.md  Procfile  QUICK_START_ONLINE_TOKENS.md  README.md  STEP2_COMPLETE.md  app.py  render.yaml  requirements.txt  run_backend.py  test_fyers_integration.py  test_manual_scan.py
institutional_ai_trade_engine/: .env  .env.example  FYERS_IMPLEMENTATION_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_FYERS.md  INSTALLATION.md  QUICKSTART.md  QUICKSTART_v2.md  README.md  README_FYERS.md  TOGGLE_FIX.md  TOKEN_REFRESH_GUIDE.md  demo.py  env.example  main.py  pyproject.toml  render.yaml  requirements.txt  run_api.py  setup.py  start.py  test_imports.py  test_scanner.py  test_scanner_mock.py  test_setup.py  test_simple.py  trading_engine.db
institutional_ai_trade_engine/data/: README.md  portfolio.json.template  triggers.yaml.template
institutional_ai_trade_engine/scripts/: seed_instruments.py
institutional_ai_trade_engine/src/: __init__.py  daemon.py
institutional_ai_trade_engine/src/alerts/: __init__.py  sheets.py  telegram.py
institutional_ai_trade_engine/src/api/: server.py
institutional_ai_trade_engine/src/core/: __init__.py  config.py  risk.py  scheduler.py
institutional_ai_trade_engine/src/data/: __init__.py  angel_client.py  broker_base.py  fetch.py  fyers_client.py  fyers_refresh.py  index_watch.py  indicators.py  mock_exchange.py
memory-bank/: README.md  architecture.md  (+3 more)
(+39 files in other folders)
