[project]
name = "institutional-ai-trade-engine"
version = "2.0.0"
description = "Institutional AI Trade Engine - FYERS-First with Broker Abstraction"
requires-python = ">=3.11"
dependencies = [
  "pydantic==2.8.2",
  "pandas==2.2.2",
  "numpy==1.26.4",
  "sqlalchemy==2.0.32",
  "alembic==1.13.2",
  "python-dotenv==1.0.1",
  "tenacity==8.3.0",
  "websocket-client==1.8.0",
  "requests==2.32.3",
  "fastapi==0.114.2",
  "uvicorn==0.30.6",
  "fyers-apiv3==3.0.8",
  "ta==0.11.0",
  "pendulum==3.0.0",
  "rich==13.7.1",
  "python-telegram-bot>=21.4",
  "apscheduler>=3.10",
  "pytz",
  "gspread",
  "oauth2client",
  "pyotp"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"